--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -113,7 +113,7 @@ position: fixed;
 height: 100%;
 width: 100%;
 z-index: -1;
-filter: blur(120px);
+filter: blur(100px);
 backdrop-filter: blur(5px);
 
 }
